# AMW_Django_ERP

./: .dockerignore  .env.example  .env_amw_dj_erp  .gitignore  AGENTS.md  Ahmad_Waddah_CV.html  Constitution_AMW_DJ_ERP.md  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  inspect_db.py  manage.py  oh-my-openagent.jsonc  pyproject.toml  reproduce_security_bypass.py  requirements.txt  test_workflow.py  workflow.json
.github/workflows/: ci.yml  docker.yml
Architecture/: Phase_10_Docker_Containerization.md  Phase_11_Render_Deployment.md  Phase_12_Supabase_Integration.md  Phase_1_Foundation.md  Phase_2_Infrastructure_Identity.md  Phase_3_IAM_Security.md  Phase_4_Inventory_Valuation.md  Phase_5_Sales_CRM.md  Phase_6_Purchasing_Procurement.md  Phase_7.5_Infrastructure_UI_Pagination.md  Phase_7.6_UI_Stabilization.md  Phase_7_Frontend_HTMX.md  Phase_8_Async_Hardening.md  Phase_9_REST_API.md  Phase_Plan_Template.md
Brand/: Dj_ERP_Colour_Pallete_CSS.scss
Constitution/: Architecture_Law.md  CICD_Law.md  Documentation_Law.md  Frontend_Law.md  Git_Law.md  Orchestrator_Law.md  Roadmap.md  Stack_and_Tools_Law.md  Style_Law.md  Testing_Law.md
Manual_Tests/: CREDENTIALS.md  MANUAL_TEST_CASES.md  MANUAL_TEST_PLAN.md  PHASE_8_TESTS.md  README.md  reproduce_security_bypass.py
accounts/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_employee_department_employee_roles.py  0003_add_employee_slug.py
audit/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
audit/logic/: logging.py
audit/migrations/: 0001_initial.py  0002_alter_auditlog_user_agent.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
core/: __init__.py  admin.py  apps.py  context_processors.py  models.py  utils.py  views.py
core/migrations/: __init__.py
core/templatetags/: audit_tags.py  pagination_tags.py
core/tests/: __init__.py  test_models.py  test_phase_7_5.py
inventory/: admin.py  api.py  api_tests.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
inventory/logic/: __init__.py  valuation.py
inventory/migrations/: 0001_initial.py  0002_stockadjustment_rejection_comment.py  0003_add_slug_fields.py  0004_slug_unique_and_remove_code.py  0005_alter_category_slug_alter_product_slug.py
inventory/operations/: __init__.py  stock.py
purchasing/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
purchasing/migrations/: 0001_initial.py  0002_add_slug_fields.py  0003_slug_unique_and_remove_code.py  0004_alter_supplier_slug_alter_suppliercategory_slug.py
purchasing/operations/: __init__.py  orders.py
reporting/: models.py  tasks.py  tasks.py.backup  tests.py  urls.py  views.py
reporting/migrations/: 0001_initial.py
sales/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
sales/logic/: __init__.py  pricing.py
sales/migrations/: 0001_initial.py  0002_add_slug_fields.py  0003_slug_unique_and_remove_code.py  0004_alter_customer_slug_alter_customercategory_slug.py
sales/operations/: __init__.py  orders.py
security/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
security/logic/: enforcement.py
templates/: health.html
utils/: README.md  db_manage_dev.sh  env_factory.sh  git_phase_finish.sh  git_task_commit.sh  infra_manage.sh  test_suite_runner.sh
(+85 files in other folders)
