# -- AMW Django ERP - Project Configuration --
# https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amw-django-erp"
version = "0.1.0"
description = "AMW Django ERP - Enterprise Resource Planning System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ahmad", email = "ahmad@amw-erp.local"}
]

# -- pytest Configuration --
# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "wac: marks tests related to Weighted Average Cost valuation",
    "iam: marks tests related to IAM and security",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -- Ruff Configuration --
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
target-version = "py310"
line-length = 120

# Re-enable import sorting with custom section configuration
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort - RE-ENABLED with custom sections
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "Q",   # flake8-quotes
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
    "ARG001",# unused function argument
    "ARG002",# unused method argument
]

# Configure isort to recognize our custom section headers
[tool.ruff.lint.isort]
known-first-party = ["accounts", "audit", "config", "core", "security"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
# Preserve custom section comments (# -- Section Name --)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ are OK
"tests.py" = ["ARG"]
"test_*.py" = ["ARG"]
"*_tests.py" = ["ARG"]
"config/settings/*.py" = ["F403", "F405"]  # wildcard settings imports are intentional

# -- Black Configuration --
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.env_amw_dj_erp
  | venv
)/
'''

# -- Coverage Configuration --
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*_tests.py",
    "manage.py",
    "config/settings/*",
    ".env_amw_dj_erp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if DEBUG:",
]
